fix modal overflow

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -14,7 +14,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 60%;
+  min-height: 60%;
   width: 40%;
   padding: 20px 25px;
   border-radius: 20px;
